--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,192 @@
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+}
+body {
+  font-family: Montserrat, sans-serif;
+  font-size: 18px;
+  color: #282851;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background-color: #a2a3b5;
+  background-image: radial-gradient(#aeaecf, #9e9fc5);
+  height: 100vh;
+  margin: 0;
+  text-align: center;
+}
+
+
+
+
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.home {
+  font-size: 100px;
+  height: 50px;
+  width: 50px;
+  color:white;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.pod-images {
+  height: 300px;
+  width: 300px;
+  display:inline-flexbox;
+  flex-wrap: wrap;
+}
+
+header {
+  padding: 20px 0;
+  height: 130px;
+}
+
+h1 {
+  margin-bottom: 20px;
+  font-size: 26px;
+  text-align: center;
+}
+
+main {
+  display: grid;
+  grid-template-areas: "main";
+}
+
+h2 {
+  font-size: 22px;
+}
+
+figcaption, p, li, h2 {
+  margin: 10px 0px;
+}
+
+a {
+  color: #f0f0fa;
+}
+
+a:hover {
+  color: #acaccc;
+}
+
+button {
+  background-color: #e1e1f1;
+  color: #131445;
+  font-size: 16px;
+  font-weight: bold;
+  padding: 10px 20px;
+  display: inline-block;
+  margin: 0 10px;
+  border-radius: 5px;
+  border: none;
+  box-shadow: 0px 4px #acaccc;
+  position: relative;
+}
+
+button:hover {
+  background-color: white;
+}
+.pict {
+  position: absolute;
+  top:400px;
+
+
+
+}
+button:active {
+  box-shadow: 0px 2px #acaccc;
+  top: 2px;
+}
+
+#more-info {
+  display: none;
+}
+
+#photo {
+  margin-bottom: 10px;
+  max-width: 100%;
+  max-height: calc(100% - 66px);
+}
+
+figure {
+  line-height: 1em;
+  margin: 10px 40px;
+  height: calc(100vh - 180px);
+  grid-area: main;
+}
+
+#info-box, #about-box {
+  padding: 30px;
+  margin: 5px 15%;
+  width: 70%;
+  height: auto;
+  min-height: calc(100vh - 170px);
+  background-color: hsla(217, 100%, 7%, 0.95);
+  border-radius: 10px;
+  grid-area: main;
+  z-index: 1;
+}
+
+#info-box p, #about-box p {
+  line-height: 1.5em;
+}
+
+#description {
+  font-size: 16px;
+  line-height: 26px;
+}
+
+.text-body {
+  text-align: left;
+}
+
+footer {
+  height: 30px;
+}
+
+@media (max-height: 690px) {
+  body {
+    font-size: 16px;
+  }
+  #photo {
+    max-height: calc(100% - 52px);
+  }
+  footer {
+    height: 20px;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+@media (orientation: portrait) {
+  #info-box, #about-box {
+    padding: 20px;
+    margin: 5px 10%;
+    width: 80%;
+  }
+}
+
+@media (max-width: 400px) {
+  button {
+    font-size: 14px;
+    padding: 10px 16px;
+  }
+  h1 {
+    font-size: 22px;
+  }
+}
+
+.main-container {
   display: flex;
   flex-direction: column;
   align-items: center;
+  color: #000;
+}
+
+.emps-container {
+  display: flex;
+  flex-flow: wrap;
+  width: 80%;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  align-items: center;
+  color: #000;
 }
